<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/characterHint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characterName"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="117dp" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:text="@string/appTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/monsterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showMonsterImage"
        android:text="@string/slayMonster"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="308dp" />

    <Button
        android:id="@+id/girlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showKissImage"
        android:text="@string/girlChoice"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="308dp" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleView"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="58dp" />

    <ImageView
        android:id="@+id/choiceImage"
        android:layout_width="355dp"
        android:layout_height="312dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/witcher3_choices" />

    <TextView
        android:id="@+id/buttonPress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/outputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="400dp" />

</androidx.constraintlayout.widget.ConstraintLayout>